traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:2: error: Missing closing brace `}' assumed here
droite()
^TraversalZigZag:12: error: Missing closing brace `}' assumed here
def doupas:Boolean = {
^