traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {

droite()
var cpt:Int=0
ecritMessage(cpt)
  def test:Boolean = {
    var t1:Boolean=false
    var t2:Boolean=false
    if (getY()==getMondeHauteur()-1) {t1=true}
    if (getX()==getMondeLargeur()-1) {t2=true}
    return t1&&t2
    
def doupas:Boolean = {
  return (getY()%2==0)
}

while (!test) {
  while (!estFaceMur) {
    if (doupas&&!estFaceMur) {
      setPos(getX()+1,getY())
      ecritMessage(cpt)
    setPos(getX(),getY()+1)
    ecritMessage(cpt)
    
    } else if (!estDosMur) {
      setPos(getX()-1,getY())
      ecritMessage(cpt)
    setPos(getX(),getY()+1)
    ecritMessage(cpt)
  }
	

}
    
    
}